# TST_SW

./: CMakeLists.txt  LICENSE  README.md  conan_install.sh  conanfile.txt  config.yaml
include/: App.hpp  Model.hpp
modules/: API.cpp  API.cppm  Connection.cpp  Connection.cppm  Defer.cppm  Signal.cppm
modules/filters/: AvgFilter.cppm  Filter.cppm
modules/hardware/: GPIO.cpp  GPIO.cppm  HX711.cpp  HX711.cppm  LedBlinker.cpp  LedBlinker.cppm
modules/interpolation/: Interpolation.cppm  LinearInterpolation.cppm
modules/model/: Calibration.cppm  CalibrationPoint.cppm  Experiment.cppm
src/: App.cpp  Model.cpp  main.cpp
www/: index.html
www/css/: style.css
www/js/: api.js  script.js
